--- a/www/public/scss/style.scss
+++ b/www/public/scss/style.scss
@@ -15,4 +15,5 @@
 @import "components/image-banner";
 @import "components/section";
 
-@import 'pages/home';
+@import 'pages/home-front';
+@import 'pages/home-back';
