--- a/www/public/css/style.css
+++ b/www/public/css/style.css
@@ -362,9 +362,6 @@ main section {
   background-repeat: no-repeat;
   background-position: center; }
 
-#header .header-logo-img {
-  width: 2.1875rem; }
-
 #menu-main {
   display: flex;
   flex-direction: row;
@@ -485,6 +482,18 @@ main section {
   -o-transition: all .3s;
   transition: all .3s;
   margin-left: 10px; }
+
+.connexion-button {
+  line-height: 26px;
+  padding: 0 30px;
+  font-size: 16px;
+  font-family: "Lato", sans-serif;
+  color: #5c8d89;
+  background-color: #f9f8eb;
+  cursor: pointer; }
+  .connexion-button:hover {
+    background-color: #74b49b;
+    color: #f9f8eb; }
 
 .submit-button {
   width: auto;
@@ -724,3 +733,102 @@ main section {
   font-size: 16px;
   line-height: 30px;
   font-weight: 400; }
+
+#header-back {
+  width: 100%;
+  background-color: #5c8d89;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  min-height: 10vh;
+  color: #FFFFFF;
+  justify-content: space-between; }
+
+.part-1-header-back {
+  display: flex;
+  flex-direction: row;
+  align-items: center; }
+
+.logo-back {
+  margin: 3px 28px; }
+
+.container-back {
+  display: flex;
+  flex-direction: row;
+  min-height: 90vh; }
+
+#adminbar {
+  width: 15%;
+  background-color: #a7d7c5;
+  border: 1px solid #5c8d89; }
+
+#content-back {
+  width: 100%; }
+
+#avatar-back {
+  height: 80%;
+  width: 80%;
+  background: #FFFFFF;
+  flex-direction: column; }
+  @media (max-width: 992px) {
+    #avatar-back {
+      height: 80%;
+      width: 100%; } }
+  @media (max-width: 768px) {
+    #avatar-back {
+      height: 100%; } }
+
+.list-admin-bar {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  padding: 0;
+  margin: 0; }
+
+.list-item {
+  color: #5c8d89;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  cursor: pointer;
+  font-size: 18px;
+  margin-bottom: 12px;
+  padding: 5px; }
+  .list-item:hover {
+    background-color: #f9f8eb;
+    color: #5c8d89; }
+
+.active {
+  background-color: #f9f8eb;
+  color: #5c8d89; }
+
+.admin-name {
+  color: #f9f8eb;
+  font-weight: bold;
+  font-size: 15px; }
+
+#content-back .titre h2 {
+  text-align: center;
+  color: #74b49b;
+  margin-top: 20px; }
+
+.fields-input-back {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around; }
+
+.fields-input-back label {
+  margin-bottom: 20px; }
+
+.fields-input-back .form-text {
+  width: 100%;
+  height: 35px;
+  background-color: #fcfcfc;
+  padding: 0 20px;
+  border: 1px solid #e1e1e1;
+  font-family: "Lato", sans-serif;
+  font-size: 16px;
+  color: #5c8d89;
+  display: block;
+  font-weight: 400;
+  line-height: 25px; }
