Create modal form in view for register & login

--- a/www/public/scss/components/_button.scss
+++ b/www/public/scss/components/_button.scss
@@ -108,13 +108,12 @@
   width: auto;
   height: 44px;
   padding: 0 30px;
-  border: none;
+  border: 1px solid #5c8d89;
   border-radius: 5px;
   display: inline-block;
   font-weight: 700;
   color: #fff;
   background-color: $color4;
-  float: right;
   -webkit-transition: all .3s;
   -moz-transition: all .3s;
   -o-transition: all .3s;
