--- a/www/public/css/style.css
+++ b/www/public/css/style.css
@@ -348,6 +348,15 @@ main section {
 .d-flex {
   display: flex; }
 
+.justify-content-end {
+  justify-content: flex-end; }
+
+.justify-content-between {
+  justify-content: space-between; }
+
+.justify-content-around {
+  justify-content: space-around; }
+
 .margin-auto {
   margin: auto; }
 
@@ -499,13 +508,12 @@ main section {
   width: auto;
   height: 44px;
   padding: 0 30px;
-  border: none;
+  border: 1px solid #5c8d89;
   border-radius: 5px;
   display: inline-block;
   font-weight: 700;
   color: #fff;
   background-color: #5c8d89;
-  float: right;
   -webkit-transition: all .3s;
   -moz-transition: all .3s;
   -o-transition: all .3s;
