--- a/www/public/scss/layout/_grid.scss
+++ b/www/public/scss/layout/_grid.scss
@@ -85,7 +85,15 @@ $columns: 12;
 .d-flex{
   display: flex;
 }
-
+.justify-content-end{
+  justify-content: flex-end;
+}
+.justify-content-between{
+  justify-content: space-between;
+}
+.justify-content-around{
+  justify-content: space-around;
+}
 
 .margin-auto{
   margin: auto;
