--- a/www/public/css/style.css
+++ b/www/public/css/style.css
@@ -363,13 +363,17 @@ main section {
 /**
  * Header
  */
-#header.header-front-page {
+#header-home.header-front-page {
   width: 100%;
   background-image: url(../img/cover_main.jpg);
   background-attachment: fixed;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center; }
+
+#header.header-front-page {
+  width: 100%;
+  background-color: #5c8d89; }
 
 #menu-main {
   display: flex;
@@ -379,12 +383,12 @@ main section {
     color: #FFFFFF;
     font-weight: bold; }
 
-#header .bottom-header {
+#header-home .bottom-header {
   width: 100%;
   padding-top: 200px;
   padding-bottom: 280px;
   text-align: center; }
-  #header .bottom-header h1 {
+  #header-home .bottom-header h1 {
     color: #FFFFFF;
     margin: 0 0 29px;
     line-height: 84px;
