--- a/www/public/scss/layout/_header.scss
+++ b/www/public/scss/layout/_header.scss
@@ -2,13 +2,17 @@
  * Header
  */
 
-#header.header-front-page {
+#header-home.header-front-page {
   width: 100%;
   background-image: url(../img/cover_main.jpg);
   background-attachment: fixed;
   @include background-cover;
 }
 
+#header.header-front-page {
+  width: 100%;
+  background-color: $color4;
+}
 
 
 #menu-main{
@@ -21,7 +25,7 @@
   }
 }
 
-#header .bottom-header {
+#header-home .bottom-header {
     width: 100%;
     padding-top: 200px;
     padding-bottom: 280px;
