--- a/www/public/scss/pages/_home-front.scss
+++ b/www/public/scss/pages/_home-front.scss
@@ -18,10 +18,11 @@
 }
 
 #approach{
-  height: 80%;
-  width: 80%;
-  @include background-contain;
-
+  height: 100%;
+  width: 90%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 #approche .section{
