--- a/www/public/scss/pages/_home-back.scss
+++ b/www/public/scss/pages/_home-back.scss
@@ -64,11 +64,13 @@
   justify-content: space-around;
   padding: 0;
   margin: 0;
+  height: 90vh;
 
 }
 
 
 .list-item{
+  text-align: center;
   color: $color4;
   display: flex;
   flex-direction: column;
@@ -125,4 +127,35 @@
     display: block;
     font-weight: 400;
     line-height: 25px;
+}
+
+
+
+.bloc-tab{
+  background-color: #fcfcfc;
+  margin-bottom: 15px;
+  & h3{
+    background-color: #d6d6d6;
+    color: #5c8d89;
+    padding: 10px;
+    font-size: 19px;
+  }
+}
+
+.acces-rapide{
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  & a{
+    text-decoration: none;
+    cursor: pointer;
+    color: #5c8d89;
+    padding-left: 25px;
+    font-size: 18px;
+    font-weight: bold;
+    &:hover{
+      text-decoration: underline;
+    }
+  }
 }
