--- a/www/public/scss/pages/_home-back.scss
+++ b/www/public/scss/pages/_home-back.scss
@@ -7,17 +7,31 @@
   min-height: 10vh;
   color: $white;
   justify-content: space-between;
+  & .row{
+    margin: 0 auto;
+  }
+  & h1{
+    text-align: center;
+  }
 }
 
 .part-1-header-back{
   display: flex;
   flex-direction: row;
   align-items: center;
+  justify-content: space-between;
 }
 .part-2-header-back{
 
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
 }
 .part-3-header-back{
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
 
 }
 .logo-back{
@@ -36,6 +50,10 @@
   width: 15%;
   background-color: $color2;
     border: 1px solid $color4;
+
+    @include max-tablet{
+      display: none;
+    }
 }
 
 #content-back{
@@ -64,7 +82,6 @@
   justify-content: space-around;
   padding: 0;
   margin: 0;
-  height: 90vh;
 
 }
 
