--- a/www/public/scss/layout/_header.scss
+++ b/www/public/scss/layout/_header.scss
@@ -68,3 +68,29 @@
     margin-right: 15px;
   }
 }
+.logo-back .burger-img{
+  display: none;
+}
+.logo-back .burger-img{
+  @include max-tablet{
+    display: flex;
+    justify-content: flex-end;
+  }
+}
+.back-header-logo-img{
+  @include max-tablet{
+    display: none;
+  }
+}
+.sticky{
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.sticky .header-logo-img{
+  transform: scale(0.9,0.9) translateY(-50%);
+  transform-origin: left top;
+}
+.sticky nav{
+  transform: scale(0.9,0.9);
+  transform-origin: right center;
+}
