--- a/www/public/css/style.css
+++ b/www/public/css/style.css
@@ -354,6 +354,9 @@ main section {
 .margin-auto {
   margin: auto; }
 
+.mt-20 {
+  margin-top: 20px; }
+
 /**
  * Header
  */
@@ -929,6 +932,34 @@ main section {
     font-weight: bold; }
     .acces-rapide a:hover {
       text-decoration: underline; }
+
+.form-control-back {
+  display: block;
+  width: 100%;
+  height: calc(2.25rem + 2px);
+  padding: .375rem .75rem;
+  font-size: 1rem;
+  line-height: 1.5;
+  color: #495057;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid #ced4da;
+  border-radius: .25rem;
+  transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out; }
+
+.form-label-back > label {
+  display: block;
+  width: 100%;
+  margin-bottom: 0;
+  line-height: 1.5;
+  color: #495057;
+  border: 1px solid transparent;
+  border-radius: 0.25rem;
+  -webkit-transition: all 0.1s ease-in-out;
+  transition: all 0.1s ease-in-out; }
+
+.form-Setting {
+  margin-top: 20px; }
 
 .card-login {
   max-width: 25rem; }
