--- a/www/public/scss/style.scss
+++ b/www/public/scss/style.scss
@@ -14,6 +14,8 @@
 @import "components/button";
 @import "components/image-banner";
 @import "components/section";
+@import "components/menu-back";
+@import "components/form-back";
 
 @import 'pages/home-front';
 @import 'pages/home-back';
