--- a/www/public/css/style.css
+++ b/www/public/css/style.css
@@ -726,13 +726,17 @@ main section {
   font-size: 18px;
   margin-bottom: 12px;
   padding: 5px; }
-  .list-item:hover {
-    background-color: #f9f8eb;
-    color: #5c8d89; }
 
 .active {
   background-color: #f9f8eb;
   color: #5c8d89; }
+
+.link {
+  margin-top: 2px;
+  margin-bottom: 2px; }
+  .link:hover {
+    background-color: #f9f8eb;
+    color: #5c8d89; }
 
 .fields-input-back {
   display: flex;
