--- a/www/public/scss/components/_menu-back.scss
+++ b/www/public/scss/components/_menu-back.scss
@@ -27,11 +27,7 @@
   align-items: center;
   cursor: pointer;
   font-size: 18px;
-  &:hover{
-    background-color: $color1;
-    color: $color4;
 
-  }
   margin-bottom: 12px;
   padding: 5px;
 }
@@ -39,4 +35,14 @@
 .active{
   background-color: $color1;
   color: $color4;
+}
+
+.link{
+  margin-top: 2px;
+  margin-bottom: 2px;
+  &:hover{
+    background-color: $color1;
+    color: $color4;
+
+  }
 }
