--- a/www/public/scss/style.scss
+++ b/www/public/scss/style.scss
@@ -16,6 +16,8 @@
 @import "components/section";
 @import "components/menu-back";
 @import "components/form-back";
+@import "components/form-front";
+@import "components/slider-testimonial";
 
 @import 'pages/home-front';
 @import 'pages/home-back';
