Animate testimonial slider & css update

--- a/www/public/scss/components/_button.scss
+++ b/www/public/scss/components/_button.scss
@@ -161,3 +161,12 @@
     color: #B47474;
   }
 }
+
+
+
+.button-slider{
+  background: none;
+  border: none;
+  cursor: pointer;
+  outline-style:none;
+}
