--- a/www/public/css/style.css
+++ b/www/public/css/style.css
@@ -634,6 +634,12 @@ textarea {
     background-color: #FFFFFF;
     color: #B47474; }
 
+.button-slider {
+  background: none;
+  border: none;
+  cursor: pointer;
+  outline-style: none; }
+
 .image-banner {
   width: 100%;
   padding-top: 42%;
@@ -818,6 +824,85 @@ textarea {
   margin-top: 20px;
   justify-content: flex-end; }
 
+#slide-container {
+  transition: all 0.6s;
+  height: 30rem;
+  position: relative; }
+
+.slider .slide:first-child {
+  position: relative;
+  display: block;
+  opacity: 1; }
+
+.slide {
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  width: 100%;
+  height: 100%;
+  opacity: 0; }
+
+.showing {
+  opacity: 1;
+  z-index: 2; }
+
+#nav-slider {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  align-items: center;
+  display: flex;
+  justify-content: space-between; }
+
+.nav-prev, .nav-next {
+  padding: 1em;
+  position: relative; }
+
+.testimonial-image {
+  text-align: center;
+  margin-bottom: 30px; }
+
+.testimonial-content {
+  width: 100%;
+  background-color: #FFFFFF;
+  margin-bottom: 30px;
+  padding: 50px 35px 25px;
+  position: relative;
+  height: 13rem; }
+  .testimonial-content::after {
+    content: "";
+    width: 0;
+    height: 0;
+    margin-right: auto;
+    margin-left: auto;
+    border-style: solid;
+    border-width: 19px 18px 0;
+    border-color: #FFFFFF transparent transparent transparent;
+    position: absolute;
+    right: 0;
+    bottom: -19px;
+    left: 0; }
+
+.testimonial-meta {
+  text-align: center;
+  width: 100%; }
+
+.dot {
+  width: 10px;
+  height: 10px;
+  background-color: #FFFFFF;
+  margin: 0 7.5px;
+  display: inline-block;
+  -webkit-transition: all .3s;
+  -moz-transition: all .3s;
+  -o-transition: all .3s;
+  transition: all .3s;
+  border-radius: 50%;
+  border: 1px solid #5c8d89;
+  cursor: pointer; }
+
 #avatar {
   height: 80%;
   width: 80%;
@@ -883,48 +968,6 @@ textarea {
   line-height: 26px;
   color: #8c9597;
   font-size: 16px; }
-
-.testimonial-image {
-  text-align: center;
-  margin-bottom: 30px; }
-
-.testimonial-content {
-  width: 100%;
-  background-color: #FFFFFF;
-  margin-bottom: 30px;
-  padding: 50px 35px 25px;
-  position: relative; }
-  .testimonial-content::after {
-    content: "";
-    width: 0;
-    height: 0;
-    margin-right: auto;
-    margin-left: auto;
-    border-style: solid;
-    border-width: 19px 18px 0;
-    border-color: #FFFFFF transparent transparent transparent;
-    position: absolute;
-    right: 0;
-    bottom: -19px;
-    left: 0; }
-
-.testimonial-meta {
-  text-align: center;
-  width: 100%; }
-
-.dot {
-  width: 10px;
-  height: 10px;
-  background-color: #FFFFFF;
-  margin: 0 7.5px;
-  display: inline-block;
-  -webkit-transition: all .3s;
-  -moz-transition: all .3s;
-  -o-transition: all .3s;
-  transition: all .3s;
-  border-radius: 50%;
-  border: 1px solid #5c8d89;
-  cursor: pointer; }
 
 .dot-group {
   text-align: center; }
