set up Menu burger front & some js update

--- a/www/public/scss/pages/_home-back.scss
+++ b/www/public/scss/pages/_home-back.scss
@@ -13,8 +13,13 @@
   & h1{
     text-align: center;
   }
+  position: relative;
 }
-
+.back-header-logo-img{
+  @include max-tablet{
+    display: none;
+  }
+}
 .logo-back{
   margin: 3px 28px;
 }
