--- a/www/public/css/style.css
+++ b/www/public/css/style.css
@@ -374,6 +374,9 @@ textarea {
   flex-direction: row;
   align-items: center;
   justify-content: space-between; }
+  @media (max-width: 768px) {
+    .part-1-header-back {
+      width: 100%; } }
 
 .part-2-header-back {
   display: flex;
@@ -384,6 +387,9 @@ textarea {
   display: flex;
   align-items: center;
   justify-content: flex-end; }
+  @media (max-width: 768px) {
+    .part-3-header-back {
+      width: 100%; } }
 
 .container-back {
   display: flex;
@@ -408,14 +414,6 @@ textarea {
 .header-logo-img {
   margin-left: 15px; }
 
-#menu-main {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around; }
-  #menu-main a {
-    color: #FFFFFF;
-    font-weight: bold; }
-
 #header-home .bottom-header {
   width: 100%;
   padding-top: 100px;
@@ -433,33 +431,6 @@ textarea {
     line-height: 84px;
     font-weight: 700;
     font-size: 48px; }
-
-@media (max-width: 992px) {
-  .header-navigation {
-    display: none; } }
-
-.menu-responsive {
-  display: none; }
-
-@media (max-width: 992px) {
-  .menu-responsive {
-    display: flex;
-    justify-content: flex-end; } }
-
-.menu-responsive .burger-img {
-  margin-right: 15px; }
-
-.logo-back .burger-img {
-  display: none; }
-
-@media (max-width: 992px) {
-  .logo-back .burger-img {
-    display: flex;
-    justify-content: flex-end; } }
-
-@media (max-width: 992px) {
-  .back-header-logo-img {
-    display: none; } }
 
 .sticky {
   background-color: rgba(0, 0, 0, 0.5); }
@@ -796,16 +767,16 @@ textarea {
 
 #menuToggle:checked + .menu-btn .menu:nth-child(1) {
   transform: translate3d(0, 6px, 0) rotate(45deg);
-  background: #5c8d89; }
+  background: #74b49b; }
 
 #menuToggle:checked + .menu-btn .menu:nth-child(2) {
   transform: rotate(-45deg) translate3d(-5.71429px, -6px, 0);
   opacity: 0;
-  background: #5c8d89; }
+  background: #74b49b; }
 
 #menuToggle:checked + .menu-btn .menu:nth-child(3) {
   transform: translate3d(0, -6px, 0) rotate(-45deg);
-  background: #5c8d89; }
+  background: #74b49b; }
 
 #menuToggle:checked ~ #adminbar {
   z-index: 1;
@@ -817,6 +788,108 @@ textarea {
     transform: translateX(-200px); }
   to {
     transform: translateX(0); } }
+
+#menu-main {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around; }
+  #menu-main a {
+    color: #FFFFFF;
+    font-weight: bold; }
+
+.nav-wrapper {
+  margin: auto;
+  width: 100%;
+  height: 80px;
+  padding: 0 25px;
+  z-index: 2; }
+
+.hidden-front {
+  display: none; }
+
+@media screen and (max-width: 800px) {
+  .nav-container {
+    position: fixed;
+    display: none;
+    overflow-y: auto;
+    z-index: -1;
+    top: 0;
+    right: 0;
+    width: 280px;
+    height: 100%;
+    background: #fff;
+    box-shadow: -1px 0 2px rgba(0, 0, 0, 0.2); }
+  .nav-wrapper {
+    padding: 0px;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end; }
+  .nav-tabs {
+    margin-top: 80px;
+    width: 100%; }
+  #menu-main {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center; }
+    #menu-main a {
+      color: #5c8d89 !important; }
+  .nav-tab:not(:last-child) {
+    padding: 20px 25px;
+    margin: 0;
+    border-right: unset;
+    border-bottom: 1px solid #f5f5f5; }
+  .nav-tab:last-child {
+    padding: 15px 25px; }
+  .menu-btn-front {
+    position: relative;
+    display: block;
+    margin: 0;
+    width: 45px;
+    height: 15px;
+    cursor: pointer;
+    z-index: 2;
+    padding: 10px;
+    border-radius: 10px; }
+  .menu-btn-front .menu-front {
+    display: block;
+    width: 100%;
+    height: 2px;
+    border-radius: 2px;
+    background: #a7d7c5; }
+  .menu-btn-front .menu-front:nth-child(2) {
+    margin-top: 4px;
+    opacity: 1; }
+  .menu-btn-front .menu-front:nth-child(3) {
+    margin-top: 4px; }
+  #menuToggle-front:checked + .menu-btn-front .menu-front {
+    transition: transform 0.2s ease;
+    background: #5c8d89; }
+  #menuToggle-front:checked + .menu-btn-front .menu-front:nth-child(1) {
+    transform: translate3d(0, 6px, 0) rotate(45deg);
+    background: #5c8d89; }
+  #menuToggle-front:checked + .menu-btn-front .menu-front:nth-child(2) {
+    transform: rotate(-45deg) translate3d(-5.71429px, -6px, 0);
+    opacity: 0;
+    background: #5c8d89; }
+  #menuToggle-front:checked + .menu-btn-front .menu-front:nth-child(3) {
+    transform: translate3d(0, -6px, 0) rotate(-45deg);
+    color: #5c8d89; }
+  #menuToggle-front:checked ~ .nav-container {
+    z-index: 1;
+    display: flex;
+    animation: menu-slide-left 0.3s ease; }
+  @keyframes menu-slide-left {
+    0% {
+      transform: translateX(200px); }
+    to {
+      transform: translateX(0); } }
+  .active-front {
+    border-bottom: 2px solid #74b49b; } }
+
+.active-front {
+  border-bottom: 2px solid white; }
 
 .fields-input-back {
   display: flex;
@@ -1096,11 +1169,16 @@ textarea {
   align-items: center;
   min-height: 10vh;
   color: #FFFFFF;
-  justify-content: space-between; }
+  justify-content: space-between;
+  position: relative; }
   #header-back .row {
     margin: 0 auto; }
   #header-back h1 {
     text-align: center; }
+
+@media (max-width: 992px) {
+  .back-header-logo-img {
+    display: none; } }
 
 .logo-back {
   margin: 3px 28px; }
