--- a/www/public/scss/layout/_grid.scss
+++ b/www/public/scss/layout/_grid.scss
@@ -111,6 +111,9 @@ $columns: 12;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
+  @include max-mobile{
+    width:100%;
+  }
 }
 .part-2-header-back{
     display: flex;
@@ -121,6 +124,9 @@ $columns: 12;
   display: flex;
   align-items: center;
   justify-content: flex-end;
+  @include max-mobile{
+  width:100%;
+  }
 }
 
 .container-back{
