--- a/www/public/scss/style.scss
+++ b/www/public/scss/style.scss
@@ -15,6 +15,8 @@
 @import "components/image-banner";
 @import "components/section";
 @import "components/menu-back";
+@import "components/menu-front";
+
 @import "components/form-back";
 @import "components/form-front";
 @import "components/slider-testimonial";
