--- a/www/public/css/style.css
+++ b/www/public/css/style.css
@@ -597,6 +597,21 @@ textarea {
     background-color: #FFFFFF;
     color: #7486B4; }
 
+.group-button {
+  margin-top: 15px; }
+
+.button-back--status {
+  border: 1px solid #5c8d89;
+  color: #fff;
+  background-color: #5c8d89;
+  width: 15rem;
+  min-height: 2rem;
+  font-size: 14px;
+  margin-left: 15px; }
+  .button-back--status:hover {
+    background-color: #FFFFFF;
+    color: #7486B4; }
+
 .button-back--remove {
   border: 1px solid #B47474;
   color: #fff;
@@ -970,8 +985,10 @@ textarea {
 
 #slide-container {
   transition: all 0.6s;
-  height: 30rem;
-  position: relative; }
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center; }
 
 .slider .slide:first-child {
   position: relative;
@@ -991,14 +1008,12 @@ textarea {
   z-index: 2; }
 
 #nav-slider {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
+  top: 46%;
   width: 100%;
   align-items: center;
   display: flex;
-  justify-content: space-between; }
+  justify-content: space-between;
+  position: absolute; }
 
 .nav-prev, .nav-next {
   padding: 1em;
@@ -1014,7 +1029,7 @@ textarea {
   margin-bottom: 30px;
   padding: 50px 35px 25px;
   position: relative;
-  height: 13rem; }
+  min-height: 16rem; }
   .testimonial-content::after {
     content: "";
     width: 0;
