--- a/www/public/scss/components/_slider-testimonial.scss
+++ b/www/public/scss/components/_slider-testimonial.scss
@@ -1,7 +1,9 @@
 #slide-container{
   transition: all 0.6s;
-  height: 30rem;
   position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .slider .slide:first-child {
@@ -27,14 +29,12 @@
 
 
 #nav-slider{
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
+  top: 46%;
   width: 100%;
   align-items: center;
   display: flex;
   justify-content: space-between;
+  position: absolute;
 }
 
 .nav-prev, .nav-next{
@@ -54,7 +54,7 @@
     margin-bottom: 30px;
     padding: 50px 35px 25px;
     position: relative;
-    height: 13rem;
+    min-height: 16rem;
     &::after{
       content: "";
       width: 0;
