--- a/www/public/scss/style.scss
+++ b/www/public/scss/style.scss
@@ -20,6 +20,7 @@
 @import "components/form-back";
 @import "components/form-front";
 @import "components/slider-testimonial";
+@import "components/anchor";
 
 @import 'pages/home-front';
 @import 'pages/home-back';
