--- a/www/public/css/style.css
+++ b/www/public/css/style.css
@@ -31,6 +31,21 @@ h6 {
   -moz-box-sizing: border-box;
   box-sizing: border-box; }
 
+html {
+  height: 100%;
+  scroll-behavior: smooth; }
+
+body {
+  background-color: #f9f8eb;
+  color: #444;
+  font-family: "Lato", sans-serif;
+  margin: 0 auto;
+  height: 100%;
+  display: flex;
+  flex-direction: column; }
+  body h1, body h2 {
+    font-family: "Lato", sans-serif; }
+
 ul {
   list-style: none; }
 
@@ -39,14 +54,6 @@ a {
   color: inherit; }
   a a:hover {
     text-decoration: none; }
-
-body {
-  background-color: #f9f8eb;
-  color: #444;
-  font-family: "Lato", sans-serif;
-  margin: 0; }
-  body h1, body h2 {
-    font-family: "Lato", sans-serif; }
 
 main section {
   padding: 1.875rem; }
@@ -405,18 +412,21 @@ textarea {
   background-attachment: fixed;
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: center; }
+  background-position: center;
+  padding-top: 100px; }
 
 #header.header-front-page {
   width: 100%;
-  background-color: #5c8d89; }
+  background-color: #5c8d89;
+  height: 8rem; }
 
 .header-logo-img {
-  margin-left: 15px; }
+  margin-left: 15px;
+  transition-duration: 0.6s; }
 
 #header-home .bottom-header {
   width: 100%;
-  padding-top: 100px;
+  padding-top: 11rem;
   padding-bottom: 280px;
   text-align: center; }
   #header-home .bottom-header h1 {
@@ -432,23 +442,37 @@ textarea {
     font-weight: 700;
     font-size: 48px; }
 
+.top-header {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 4;
+  transition-duration: 0.6s; }
+
 .sticky {
-  background-color: rgba(0, 0, 0, 0.5); }
+  background-color: rgba(0, 0, 0, 0.6);
+  max-height: 100px; }
 
 .sticky .header-logo-img {
-  transform: scale(0.9, 0.9) translateY(-50%);
-  transform-origin: left top; }
+  transform: scale(0.7, 0.7) translateY(-10%);
+  transform-origin: left top;
+  transition-duration: 0.4s; }
 
 .sticky nav {
   transform: scale(0.9, 0.9);
-  transform-origin: right center; }
+  transform-origin: right center;
+  transition-duration: 0.4s; }
+  @media (max-width: 992px) {
+    .sticky nav {
+      transform: none; } }
 
 #footer {
   width: 100%;
   background-color: #5c8d89;
   padding: 20px 0 0 0;
   text-align: center;
-  color: #FFFFFF; }
+  color: #FFFFFF;
+  margin-top: auto; }
 
 #footer p {
   margin-top: 0px; }
@@ -822,7 +846,10 @@ textarea {
 .hidden-front {
   display: none; }
 
-@media screen and (max-width: 800px) {
+.nav-container {
+  transition-duration: 0.6s; }
+
+@media (max-width: 992px) {
   .nav-container {
     position: fixed;
     display: none;
@@ -1061,6 +1088,12 @@ textarea {
   border-radius: 50%;
   border: 1px solid #5c8d89;
   cursor: pointer; }
+
+#discover-anchor {
+  width: 1px;
+  height: 1px;
+  position: relative;
+  bottom: 6rem; }
 
 #avatar {
   height: 80%;
