--- a/www/public/scss/base/_global.scss
+++ b/www/public/scss/base/_global.scss
@@ -3,7 +3,23 @@
     -moz-box-sizing: border-box;
     box-sizing: border-box;
 }
+html{
+  height:100%;
+  scroll-behavior: smooth;
+}
 
+body{
+  background-color: $color1;
+  color: $dark-grey;
+  font-family: $fontLato;
+  h1,h2{
+    font-family: $fontLato;
+  }
+  margin: 0 auto;
+  height:100%;
+  display: flex;
+   flex-direction: column;
+}
 ul{
   list-style: none;
 }
@@ -16,15 +32,6 @@ a{
   }
 }
 
-body{
-  background-color: $color1;
-  color: $dark-grey;
-  font-family: $fontLato;
-  h1,h2{
-    font-family: $fontLato;
-  }
-  margin: 0;
-}
 
 main section{
   padding: rem(30);
