--- a/www/public/scss/components/_menu-front.scss
+++ b/www/public/scss/components/_menu-front.scss
@@ -19,8 +19,10 @@
 .hidden-front{
   display: none;
 }
-
-@media screen and (max-width: 800px) {
+.nav-container{
+  transition-duration: 0.6s;
+}
+@include max-tablet {
 	.nav-container {
 		position: fixed;
 		display: none;
@@ -33,7 +35,7 @@
 		background: #fff;
 		box-shadow: -1px 0 2px rgba(0, 0, 0, 0.2);
 	}
-  
+
   .nav-wrapper {
     padding: 0px;
     margin: 0;
