--- a/www/public/scss/components/_menu-front.scss
+++ b/www/public/scss/components/_menu-front.scss
@@ -141,6 +141,26 @@
 .active-front{
   border-bottom: 2px solid white;
 }
+#menu-sup{
+  position: relative;
+  cursor: pointer;
+}
+.submenu {
+	background: $color2;
+	position: absolute;
+	list-style-type: none;
+	padding: 0;
+	cursor: pointer;
+  display:none;
+  border-radius: 10px;
+}
+.submenu-item {
+  font-size: 15px;
+  padding: 15px;
+}
+.submenu-item:hover {
+	background: $color4;
+}
 
 
 
