--- a/www/public/scss/layout/_grid.scss
+++ b/www/public/scss/layout/_grid.scss
@@ -21,6 +21,7 @@ $columns: 12;
   width: 100%;
   margin: auto;
   overflow-x: hidden;
+  overflow-y: -webkit-paged-y;
   @include desktop{
     width: $large-container-width;
   }
