--- a/www/public/scss/components/_button.scss
+++ b/www/public/scss/components/_button.scss
@@ -133,6 +133,8 @@
 }
 
 .button-back--display{
+  width: 45px;
+  margin-right: 2px;
   border: 1px solid $color3;
   color: #fff;
   background-color: $color3;
