--- a/www/public/scss/style.scss
+++ b/www/public/scss/style.scss
@@ -21,6 +21,7 @@
 @import "components/form-front";
 @import "components/slider-testimonial";
 @import "components/anchor";
+@import "components/blog";
 
 @import 'pages/home-front';
 @import 'pages/home-back';
