--- a/www/public/scss/base/_global.scss
+++ b/www/public/scss/base/_global.scss
@@ -16,9 +16,10 @@ body{
     font-family: $fontLato;
   }
   margin: 0 auto;
-  height:100%;
-  display: flex;
-   flex-direction: column;
+  min-height: 100%;
+  // display: flex;
+  //  flex-direction: column;
+  position: relative;
 }
 ul{
   list-style: none;
