--- a/www/public/scss/pages/_login-front.scss
+++ b/www/public/scss/pages/_login-front.scss
@@ -53,6 +53,31 @@
     transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
 }
 
+.form-control-comment {
+    display: block;
+    height: calc(2.25rem + 2px);
+    padding: .375rem .75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    color: #495057;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    border-radius: .25rem;
+    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+.form-label-comment > label {
+
+    display: block;
+    width: 50%;
+    margin-bottom: 0;
+    line-height: 1.5;
+    color: #495057;
+    border: 1px solid transparent;
+    border-radius: 0.25rem;
+    -webkit-transition: all 0.1s ease-in-out;
+    transition: all 0.1s ease-in-out;
+}
 .form-label-login > label {
 
     display: block;
