--- a/www/public/scss/base/_global.scss
+++ b/www/public/scss/base/_global.scss
@@ -21,6 +21,11 @@ body{
   //  flex-direction: column;
   position: relative;
 }
+
+main{
+  position: relative;
+  padding-bottom: 16rem;
+}
 ul{
   list-style: none;
 }
