dashboard & page templating & language for datatable

--- a/www/public/css/style.css
+++ b/www/public/css/style.css
@@ -1161,7 +1161,7 @@ textarea {
   flex-direction: column;
   padding: 15px; }
 
-.main-blog, .main-article {
+.main-blog, .main-article, .main-page {
   margin-bottom: 16rem; }
 
 .blog-description {
