--- a/www/public/scss/pages/_home-back.scss
+++ b/www/public/scss/pages/_home-back.scss
@@ -93,3 +93,8 @@
   background-color: rgba( 0, 0, 0, .1 );
   height: 50px;
 }
+
+.active-button{
+  background-color: #FFFFFF;
+  color: #7486B4;
+}
