--- a/www/public/scss/style.scss
+++ b/www/public/scss/style.scss
@@ -22,6 +22,7 @@
 @import "components/slider-testimonial";
 @import "components/anchor";
 @import "components/blog";
+@import "components/validation";
 
 @import 'pages/home-front';
 @import 'pages/home-back';
