Templating form forgetpassword

--- a/www/public/css/style.css
+++ b/www/public/css/style.css
@@ -681,6 +681,15 @@ textarea {
   cursor: pointer;
   outline-style: none; }
 
+#profileSelect {
+  padding: 0.75rem;
+  color: #ffffff;
+  background-color: #5c8d89;
+  border-radius: 5px;
+  cursor: pointer;
+  text-align-last: center;
+  font-size: 14px; }
+
 .image-banner {
   width: 100%;
   padding-top: 42%;
