--- a/www/public/scss/components/_button.scss
+++ b/www/public/scss/components/_button.scss
@@ -216,3 +216,14 @@
   cursor: pointer;
   outline-style:none;
 }
+
+
+#profileSelect {
+    padding: 0.75rem;
+    color: #ffffff;
+    background-color: #5c8d89;
+    border-radius: 5px;
+    cursor: pointer;
+    text-align-last:center;
+    font-size: 14px;
+}
