--- a/www/public/scss/components/_form-back.scss
+++ b/www/public/scss/components/_form-back.scss
@@ -67,3 +67,29 @@
 .form-Setting{
   margin-top : 20px;
 }
+
+
+#category-select{
+  display: block;
+  width: 100%;
+  height: calc(2.25rem + 2px);
+  padding: .375rem .75rem;
+  font-size: 1rem;
+  line-height: 1.5;
+  color: #495057;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid #ced4da;
+  border-radius: .25rem;
+  transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+
+#profileSelect {
+    padding: 0.75rem;
+    color: #ffffff;
+    background-color: #5c8d89;
+    border-radius: 5px;
+    cursor: pointer;
+    text-align-last:center;
+    font-size: 14px;
+}
