update front office / update select form back

--- a/www/public/scss/components/_form-back.scss
+++ b/www/public/scss/components/_form-back.scss
@@ -84,7 +84,7 @@
   transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
 }
 
-#profileSelect {
+.profileSelect {
     padding: 0.75rem;
     color: #ffffff;
     background-color: #5c8d89;
