--- a/www/public/css/style.css
+++ b/www/public/css/style.css
@@ -1086,7 +1086,7 @@ textarea {
   border-radius: .25rem;
   transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out; }
 
-#profileSelect {
+.profileSelect {
   padding: 0.75rem;
   color: #ffffff;
   background-color: #5c8d89;
